--- a/ejercicio1/index.html
+++ b/ejercicio1/index.html
@@ -6,16 +6,18 @@
     <link rel="stylesheet" href="style.css">
     <title>Ejercicio 1</title>
 </head>
+
 <body>
+
+    <header class="header">
+
+        <div class="logo-container"></div>
+
+        <div class="menu-container"></div>
+
+    </header>
+
     <main class="main-wrapper">
-
-        <header class="header">
-
-            <div class="logo-container"></div>
-
-            <div class="menu-container"></div>
-
-        </header>
 
         <section class="main-section">
 
@@ -34,12 +36,12 @@
                     <header class="content-mid-header"></header>
 
                     <div class="content">
-
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                            accusantium doloremque laudantium, totam rem aperiam, Sed ut perspiciatis
-                            unde omnis iste natus error sit voluptatem
-                            accusantium doloremque laudantium, totam rem aperiam, </p>
-
+                        <p>
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                            accusantium doloremque laudantium, totam rem aperiam. Sed ut perspiciatis
+                            unde omnis iste natus error sit voluptatem accusantium doloremque
+                            laudantium, totam rem aperiam.
+                        </p>
                     </div>
 
                 </section>
@@ -48,8 +50,11 @@
 
         </section>
 
-        <footer class="footer"> </footer>
-
     </main>
+
+    <footer class="footer">
+        FOOTER
+    </footer>
+
 </body>
 </html>
