--- a/ejercicio2/index.html
+++ b/ejercicio2/index.html
@@ -6,6 +6,38 @@
     <title>Ejercicio 2</title>
 </head>
 <body>
-    
+<h1>Formulario de registro</h1>
+    <form method="GET" action="">
+        <p>
+            <label for="nombre">Nombre:</label><br>
+            <input type="text" id="nombre" name="nombre" maxlength="50">
+        </p>       
+        <p>
+            <label for="apellidos">Apellidos:</label><br>
+            <input type="text" id="apellidos" name="apellidos" maxlength="50">
+        </p>
+        <p>
+            Sexo:<br>
+            <input type="radio" id="hombre" name="sexo" value="hombre">
+            <label for="hombre">Hombre</label><br>
+            <input type="radio" id="mujer" name="sexo" value="mujer">
+            <label for="mujer">Mujer</label>
+        </p>      
+        <p>
+            <label for="email">Correo electrónico:</label><br>
+            <input type="text" id="email" name="email">
+        </p>
+        <p>
+            <input type="checkbox" id="novedades" name="novedades" checked>
+            <label for="novedades">Deseo recibir información sobre novedades y ofertas</label>
+        </p>
+        <p>
+            <input type="checkbox" id="condiciones" name="condiciones">
+            <label for="condiciones">Declaro haber leído y aceptar las condiciones generales del programa y la normativa sobre protección de datos</label>
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+        </p>
+    </form>
 </body>
 </html>
