--- a/ejercicio4/index.html
+++ b/ejercicio4/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 4</title>
 </head>
+
 <body>
-    
+    <table border="1" style="width: 100%;">
+        <tr style="background-color: red; height: 40px;">
+            <th>Name</th>
+            <th>Last Name</th>
+            <th>Phone Number</th>
+        </tr>
+        <tr>
+            <td>Justin</td>
+            <td>Priveto</td>
+            <td>+(346)737-5829</td>
+        </tr>
+        <tr>
+            <td>Jacob</td>
+            <td>Prieto</td>
+            <td>+(345)234-2323</td>
+        </tr>
+        <tr>
+            <td>James</td>
+            <td>Mc Dinzk</td>
+            <td>+(234)455-3434</td>
+        </tr>
+    </table>
 </body>
+
 </html>
